--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mqtt-client",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -10,8 +10,16 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "peerDependencies": {
+    "@angular/core": ">2.0.0",
+    "rxjs": ">5.5.0",
+    "typescript": ">2.4.0",
+    "mqtt": "^2.16.0"
+  },
   "dependencies": {
+    "mqtt": "^2.16.0"
+  },
+  "devDependencies": {
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -22,11 +30,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
-    "mqtt": "^2.16.0",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.19",
     "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
@@ -35,15 +40,40 @@
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
+    "jasmine-marbles": "^0.2.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^2.2.0",
     "protractor": "~5.1.2",
+    "puppeteer": "^1.2.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  }
+  },
+  "description": "Strongly typed reactive mqtt client.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wermerb/ngx-mqtt-client.git"
+  },
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "angular5",
+    "angular-mqtt",
+    "mqtt",
+    "mqtt-client",
+    "ngx-mqtt",
+    "mqtt angular",
+    "angular mqtt"
+  ],
+  "author": "Balázs Wermer <wermerb@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/wermerb/ngx-mqtt-client/issues"
+  },
+  "homepage": "https://github.com/wermerb/ngx-mqtt-client#readme"
 }
