--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mqtt-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -8,13 +8,18 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "packagr": "ng-packagr -p package.json"
+  },
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/public_api.ts"
+    }
   },
   "peerDependencies": {
     "@angular/core": ">2.0.0",
     "rxjs": ">5.5.0",
-    "typescript": ">2.4.0",
-    "mqtt": "^2.16.0"
+    "typescript": ">2.4.0"
   },
   "dependencies": {
     "mqtt": "^2.16.0"
