--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "mqtt": "^2.16.0"
   },
   "devDependencies": {
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
     "@angular/cli": "~1.7.3",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
+    "@angular/flex-layout": "^5.0.0-beta.13",
+    "@angular/forms": "^5.2.9",
     "@angular/language-service": "^5.2.0",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@types/jasmine": "~2.8.3",
@@ -39,8 +44,8 @@
     "codelyzer": "^4.0.1",
     "core-js": "^2.4.1",
     "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
     "jasmine-marbles": "^0.2.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
