--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "peerDependencies": {
     "@angular/core": ">2.0.0",
     "rxjs": ">5.5.0",
-    "typescript": ">2.4.0"
-  },
-  "dependencies": {
+    "typescript": ">2.4.0",
     "mqtt": "^2.17.0"
   },
   "devDependencies": {
